<resources>
    <string name="app_name">DVAdmin</string>
    <string name="action_settings">Settings</string>
    <string name="uploader">Uploader</string>
    <string name="vuploader">Vuploader</string>
    <string name="muzon">Muzon</string>
    <string name="usernews">Usernews</string>
    <string name="gallery">Gallery</string>
    <string name="forum">Forum</string>
    <string name="error_network_timeout">Error timeout, try again later</string>
    <string name="error_server">Server error, try again later!</string>
    <string name="error_network">Network error, try again later!</string>
    <string name="refresh">Refresh</string>
    <string name="visitors">Users</string>
    <string name="tic">Yandex X</string>
    <string name="space">Free space</string>
    <string name="title">Site status</string>
    <string name="devices">Devices</string>
    <string name="abuse_file">Abuse files</string>
    <string name="abuse_forum">Abuse forum</string>
    <string name="action_bd">Birthdays</string>
    <string name="action_close">Close</string>
    <string name="action_whoaddedfiles">Who adding files</string>
    <string name="razdel_header">Chapters</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="action_lastbans">Bans</string>
    <string name="action_lastdel">Deletions</string>
    <string name="action_lasttopics">Deleted topics</string>
    <string name="action_lastcom">Deleted comments</string>
    <string name="action_others">Others apps</string>
    <string name="action_feedback">Feedback</string>
    <string name="app_mail">admin@dimonvideo.ru</string>
    <string name="today">Today</string>
    <string name="please_wait">Please wait</string>
    <string name="action_admin">Админка</string>
    <string name="action_admin_upl">Ожидающие в Обменнике</string>
    <string name="no">No</string>
    <string name="theme_system">Follow system</string>
    <string name="ok">Yes</string>
    <string name="view_header">View</string>
    <string name="theme_black">Dark theme</string>
    <string name="restart_app">Restart the app</string>
    <string name="scale_title">Font size</string>
    <string name="widget_settings">Widget info</string>
    <string name="visitors_widget">Visitors</string>
    <string name="tic_widget">TIC</string>
    <string name="perm_invalid">Nopermissions!</string>
    <string name="press_twice">Press twice to exit</string>
    <string name="actually">"actually: "</string>
    <string name="dvclient">DVClient integration</string>
    <string name="dvclient_sum">chapters will open in dvclient app</string>
    <string name="func_header">Functions</string>
    <string name="updating">Обновление...</string>
    <string name="no_data">Нет данных</string>
    <string name="cached_data_suffix">" (кэш)"</string>
    <string name="loading">Загружаем</string>
</resources>