<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="2dp">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/refresh_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/refresh"
        android:src="@android:drawable/stat_notify_sync" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:paddingHorizontal="2dp"
        android:text="@string/visitors_widget"
        android:textColor="@color/date"
        android:textSize="10sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/widget_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/date"
        android:layout_below="@id/text"
        android:layout_marginTop="2dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:paddingHorizontal="2dp"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="end"
        android:maxLines="1"
        android:padding="2dp"
        android:textColor="@color/date"
        android:textSize="10sp" />
</RelativeLayout>